--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #server info
-spring.application.name=say-hello
+spring.application.name=PRODUCER
 server.port=9092
 management.security.enabled=false
 eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
