--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
-#server info
-spring.application.name=PRODUCER
-server.port=9094
-management.security.enabled=false
-eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
+#server
+server.port=10011
+spring.application.name=BALANCE-SERVER-TEST
 
-#log
-logging.config=classpath:logConfig.xml
+#eureka
+eureka.client.service-url.defaultZone=http://localhost:1111/eureka/
 
+#zipkin
+#spring.zipkin.base-url=http://localhost:16050
+spring.zipkin.service.name=zhaoyh-log
+#spring.sleuth.sampler.percentage=1.0
